RESOLVED FIXED76689
CSS Shaders: Repainting the FECustomFilter requires full source image
https://bugs.webkit.org/show_bug.cgi?id=76689
Summary CSS Shaders: Repainting the FECustomFilter requires full source image
Alexandru Chiculita
Reported 2012-01-20 00:06:09 PST
Because the shader has access to the whole image, repainting a filter chain with a FECustomFilter needs to paint the whole RenderLayer instead of just the dirty areas.
Attachments
Patch V1 (18.01 KB, patch)
2012-04-24 14:24 PDT, Alexandru Chiculita
dino: review+
Alexandru Chiculita
Comment 1 2012-04-24 14:24:41 PDT
Created attachment 138643 [details] Patch V1
Dean Jackson
Comment 2 2012-04-24 16:01:14 PDT
Comment on attachment 138643 [details] Patch V1 View in context: https://bugs.webkit.org/attachment.cgi?id=138643&action=review One small comment > LayoutTests/css3/filters/resources/color-add.fs:8 > + // Offset the color value with 0.3 on each color channel. Comment isn't quite correct (and you also only add 0.1 in the test :)
Alexandru Chiculita
Comment 3 2012-04-24 16:03:08 PDT
(In reply to comment #2) > (From update of attachment 138643 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=138643&action=review > > One small comment > > > LayoutTests/css3/filters/resources/color-add.fs:8 > > + // Offset the color value with 0.3 on each color channel. > > Comment isn't quite correct (and you also only add 0.1 in the test :) Good catch. Will fix. Thanks for the r+.
Alexandru Chiculita
Comment 4 2012-04-24 16:05:17 PDT
(In reply to comment #3) > (In reply to comment #2) > > (From update of attachment 138643 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=138643&action=review > > > > One small comment > > > > > LayoutTests/css3/filters/resources/color-add.fs:8 > > > + // Offset the color value with 0.3 on each color channel. > > > > Comment isn't quite correct (and you also only add 0.1 in the test :) > > Good catch. Will fix. > > Thanks for the r+. I will also add the tests in chromium's expected results as requiring rebaselines. I want the cr-linux to finish to grab the generated ones on linux.
Alexandru Chiculita
Comment 5 2012-04-24 16:56:37 PDT
It seems like the ews takes too long. I've committed with only mac results for now. Landed in http://trac.webkit.org/changeset/115138.
Note You need to log in before you can comment on or make changes to this bug.