CSS Shaders: Repainting the FECustomFilter requires full source image https://bugs.webkit.org/show_bug.cgi?id=76689

Source/WebCore:

Reviewed by Dean Jackson..

When a pixel of a filtered layer changes we need to update the whole bounding box of the layer and
not just the dirty rectangle. That's because the shader might change the color of any of the pixels inside the box.

Added tests where a shader is moving and rotating the contents and the actual
dirty box of the source image is not the same as the output dirty rectangle.

Tests: css3/filters/custom/filter-repaint-custom-clipped.html
       css3/filters/custom/filter-repaint-custom-rotated.html
       css3/filters/custom/filter-repaint-custom.html

* rendering/FilterEffectRenderer.cpp:
(WebCore::FilterEffectRenderer::FilterEffectRenderer):
(WebCore::FilterEffectRenderer::build):
(WebCore::FilterEffectRenderer::computeSourceImageRectForDirtyRect):
* rendering/FilterEffectRenderer.h:
(FilterEffectRenderer):
(WebCore::FilterEffectRenderer::hasCustomShaderFilter):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setFilterBackendNeedsRepaintingInRect):

LayoutTests:

Reviewed by Dean Jackson.

* css3/filters/custom/filter-repaint-custom-clipped-expected.png: Added.
* css3/filters/custom/filter-repaint-custom-clipped-expected.txt: Added.
* css3/filters/custom/filter-repaint-custom-clipped.html: Added.
* css3/filters/custom/filter-repaint-custom-expected.png: Added.
* css3/filters/custom/filter-repaint-custom-expected.txt: Added.
* css3/filters/custom/filter-repaint-custom-rotated-expected.png: Added.
* css3/filters/custom/filter-repaint-custom-rotated-expected.txt: Added.
* css3/filters/custom/filter-repaint-custom-rotated.html: Added.
* css3/filters/custom/filter-repaint-custom.html: Added.
* css3/filters/resources/color-add.fs: Added.
* css3/filters/resources/vertex-horizontal-offset.vs: Added.
* css3/filters/resources/vertex-rotate.vs: Added.
* platform/chromium-mac/css3/filters/custom/filter-repaint-custom-clipped-expected.png: Added.
* platform/chromium-mac/css3/filters/custom/filter-repaint-custom-expected.png: Added.
* platform/chromium-mac/css3/filters/custom/filter-repaint-custom-rotated-expected.png: Added.
* platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/102292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115138 268f45cc-cd09-0410-ab3c-d52691b4dbfc