third_party/WebKit/LayoutTests/css3/filters/resources/color-add.fs
@@ -1,0 +1,11 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+precision mediump float;
+varying vec2 v_texCoord;
+uniform sampler2D s_texture;
+uniform float add;
+
+void main()
+{
+    // Offset the color value with "add" on each color channel.
+    gl_FragColor = texture2D(s_texture, v_texCoord) + add;
+}
